--- a/res/layout/notifications_main.xml
+++ b/res/layout/notifications_main.xml
@@ -13,14 +13,15 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:gravity="center_horizontal"
         android:orientation="vertical">
+
 	        <LinearLayout
 	            android1:id="@+id/people_notifications"
 	            android1:layout_width="match_parent"
 	            android1:layout_height="wrap_content"
-	            android1:divider="?android:dividerVertical"
-	    		android1:dividerPadding="@dimen/activity_vertical_margin"
-	            android1:orientation="vertical" 
-	             android:showDividers="middle|end">
+	            android:showDividers="middle|end"
+	            android1:divider="?android:dividerHorizontal"
+	            android1:orientation="vertical" >
+
 	        </LinearLayout>
     </LinearLayout>
 
