--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -11,4 +11,10 @@
         <item name="android:textColor">#33B5E5</item>
     </style>
 
+    <style name="CodeDialogStyle" parent="@android:style/Theme.Holo.Dialog">
+	    <item name="android:backgroundDimEnabled">false</item>
+	    <item name="android:cacheColorHint">@android:color/transparent</item>
+	    <item name="android:windowBackground">@android:color/transparent</item>
+	</style>
+    
 </resources>
