--- a/res/layout/notifications_main.xml
+++ b/res/layout/notifications_main.xml
@@ -1,28 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android1="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView1"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
-
-    <LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    	xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:gravity="center_horizontal"
         android:orientation="vertical">
-
-	        <LinearLayout
-	            android1:id="@+id/people_notifications"
-	            android1:layout_width="match_parent"
-	            android1:layout_height="wrap_content"
-	            android:showDividers="middle|end"
-	            android1:divider="?android:dividerHorizontal"
-	            android1:orientation="vertical" >
-
-	        </LinearLayout>
-    </LinearLayout>
-
-</ScrollView>
+	    <LinearLayout
+	            android:id="@+id/people_notifications"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:divider="?android:dividerVertical"
+	    		android:dividerPadding="@dimen/activity_vertical_margin"
+	            android:orientation="vertical" 
+	            android:showDividers="middle|end">
+	   </LinearLayout>
+</LinearLayout>
