--- a/res/layout/user_item.xml
+++ b/res/layout/user_item.xml
@@ -49,6 +49,15 @@
                     android:text="Checked in"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+                <ImageButton android:id="@+id/messagesButton"
+                    android:src="@drawable/messages"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
