Multi-item ordering with UI.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@339 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/dialog_drink_order.xml
+++ b/res/layout/dialog_drink_order.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:descendantFocusability="beforeDescendants"
     android:divider="?android:dividerHorizontal"
-	android:descendantFocusability="beforeDescendants"
-	android:focusableInTouchMode="true"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
-    android:showDividers="middle" >
+    android:showDividers="beginning|middle|end" >
     
     <LinearLayout
         android:layout_width="fill_parent"
@@ -65,126 +65,14 @@
             </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_weight="2"
-        android:visibility="gone" >
-
-        <Button
-            android:id="@+id/Button02"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="8dp"
-            android:layout_weight="2"
-            android:background="@drawable/rounded_corner"
-            android:drawableLeft="@drawable/like"
-            android:text=" Like"
-            android:textColor="#aaaaaa"
-            android:textSize="14sp" />
-
-        <Button
-            android:id="@+id/Button03"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="8dp"
-            android:layout_weight="2"
-            android:background="@drawable/rounded_corner"
-            android:drawableLeft="@drawable/comment"
-            android:text=" Comment"
-            android:textColor="#aaaaaa"
-            android:textSize="14sp" />
-
-        <Button
-            android:id="@+id/button1"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="2"
-            android:background="@drawable/rounded_corner"
-            android:drawableLeft="@android:drawable/ic_menu_share"
-            android:text="Share"
-            android:textColor="#aaaaaa"
-            android:textSize="14sp" />
-
-        <RatingBar
-            android:id="@+id/ratingBar1"
-            android:layout_width="wrap_content"
-            android:layout_height="42dp"
-            android:max="1"
-            android:numStars="1"
-            android:progress="1"
-            android:rating="1"
-            android:stepSize="1" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
+        android:id="@+id/view_dialog_drink_items"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:orientation="horizontal"
-        android:padding="@dimen/abs__action_bar_icon_vertical_padding" >
+        android:divider="?android:dividerHorizontal"
+        android:orientation="vertical"
+        android:showDividers="beginning|middle|end" >
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="2"
-            android:gravity="center_vertical"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/view_dialog_drink_title"
-                android:layout_width="fill_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
-                android:gravity="left|center_vertical"
-                android:text="Sambuca on the rocks"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="#ffffff"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/view_dialog_drink_description"
-                android:layout_width="fill_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
-                android:gravity="center_vertical" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/TextView02"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$ "
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/view_dialog_drink_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginRight="4dp"
-                android:text="6.00"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textStyle="bold" />
-
-        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -248,7 +136,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/holo_blue_light" />
 
             <EditText
                 android:id="@+id/view_dialog_drink_tip_amount"
@@ -256,9 +145,74 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:text="1.00"
-                android:textAppearance="?android:attr/textAppearanceMedium" >
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/holo_blue_light" >
+
+                <requestFocus />
             </EditText>
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="12dp"
+        android:layout_weight="2"
+        android:paddingTop="1dp" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:gravity="center_vertical"
+            android:text="  Tax: "
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <TextView
+            android:id="@+id/TextView11"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:gravity="center_vertical"
+            android:text="$"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <TextView
+            android:id="@+id/view_dialog_drink_tax_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:gravity="center_vertical"
+            android:text="0.90"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/TextView12"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="2"
+            android:gravity="right|center_vertical"
+            android:text="  Total: "
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <TextView
+            android:id="@+id/TextView09"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:gravity="center_vertical"
+            android:text="$"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/holo_blue_light" />
+
+        <TextView
+            android:id="@+id/view_dialog_drink_total_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_gravity="right"
+            android:gravity="center_vertical"
+            android:text="12.90"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/holo_blue_light"
+            android:textStyle="bold" />
+
     </LinearLayout>
 
 </LinearLayout>
