--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,33 +3,83 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/background_logo"
-    android:orientation="vertical"
-    android:padding="2dp" >
+    android:background="@drawable/background"
+    android:orientation="vertical" >
+
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4" >
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        android:orientation="horizontal" >
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2" >
-        </FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/TextView01"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:text="ALPHA"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#f83ab3"
-            android:textStyle="bold" />
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2" >
+
+            </FrameLayout>
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="8"
+                android:scaleType="centerInside"
+                android:src="@drawable/logo" />
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2" >
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="7" >
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/TextView01"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:text="Beta"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#f83ab3"
+                android:textStyle="bold" />
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2" >
+            </FrameLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5" >
+    </FrameLayout>
 
     <LinearLayout
         style="?android:attr/buttonBarStyle"
@@ -39,63 +89,143 @@
         android:orientation="vertical"
         android:padding="@dimen/activity_vertical_margin" >
 
-        <Button
-            android:id="@+id/button_active_venue"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/arrowexpand_light"
-            android:gravity="left|center_vertical"
-            android:hint="Active venue"
-            android:textAppearance="?android:attr/textAppearanceLargeInverse" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
 
-        <Button
-            android:id="@+id/button_checkin"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/arrowexpand_light"
-            android:gravity="left|center_vertical"
-            android:text="Nearby venues"
-            android:textAppearance="?android:attr/textAppearanceLargeInverse" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="@dimen/activity_vertical_margin"
+                android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/button_notifications"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/arrowexpand_light"
-            android:gravity="left|center_vertical"
-            android:text="My notifications"
-            android:textAppearance="?android:attr/textAppearanceLargeInverse"
-            />
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/activity_vertical_margin" >
 
-        <Button
-            android:id="@+id/button_my_profile"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/arrowexpand_light"
-            android:gravity="left|center_vertical"
-            android:text="My profile"
-            android:textAppearance="?android:attr/textAppearanceLargeInverse" />
+                    <Button
+                        android:id="@+id/button_checkin"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/activity_vertical_margin"
+                        android:drawableTop="@drawable/home_icon"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:text="  Venues"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <Button
-            android:id="@+id/button_logout"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/arrowexpand_light"
-            android:gravity="left|center_vertical"
-            android:text=" Log out"
-            android:textAppearance="?android:attr/textAppearanceLargeInverse" />
+                    <Button
+                        android:id="@+id/button_active_venue"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="60dp"
+                        android:drawableTop="@drawable/tickmark"
+                        android:gravity="left|center_vertical"
+                        android:textAppearance="?android:attr/textAppearanceLargeInverse" />
+
+                </RelativeLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp" >
+
+                </FrameLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/activity_vertical_margin" >
+
+                    <Button
+                        android:id="@+id/button_notifications"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/activity_vertical_margin"
+                        android:drawableTop="@drawable/chat_icon"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:text="Notifications"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="75dp"
+                        android:src="@drawable/exclamatory_icon_ping" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_margin="@dimen/activity_vertical_margin"
+                android:orientation="vertical" >
+
+                <Button
+                    android:id="@+id/Button01"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
+                    android:layout_marginTop="9dp"
+                    android:drawableTop="@drawable/star_icon"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:text="Rewards"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp" >
+                </FrameLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
+                    android:layout_marginTop="12dp" >
+
+                    <Button
+                        android:id="@+id/button_my_profile"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/activity_vertical_margin"
+                        android:drawableTop="@drawable/user_icon"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:text="Profile"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    <ImageView
+                        android:id="@+id/ImageView01"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="65dp"
+                        android:src="@drawable/exclamatory_icon_ping" />
+                </RelativeLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="2" >
+        android:layout_weight="4" >
     </FrameLayout>
 
     <LinearLayout
@@ -107,21 +237,24 @@
             android:id="@+id/view_main_deployment_environment"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:gravity="center"
-            android:text="PRODUCTION SERVER"
+            android:text="Server: PROD"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#f83ab3"
+            android:textSize="10sp"
             android:typeface="normal" />
 
-        <TextView
-            android:id="@+id/textView4"
+        <Button
+            android:id="@+id/button_logout"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="bottom|center_horizontal"
-            android:padding="@dimen/activity_vertical_margin"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:text="(C) Vendsy, Inc. All rights reserved."
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#ff33b5e5" />
+            android:textColor="@android:color/holo_blue_dark" />
 
     </LinearLayout>
 
