--- a/res/layout/user_item.xml
+++ b/res/layout/user_item.xml
@@ -13,7 +13,7 @@
             android:id="@+id/view_user_list_image_resource"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:scaleType="fitXY" />
+            android:scaleType="centerCrop" />
 
         <LinearLayout
             android:layout_width="0dp"
